<resources>
    <string name="app_name">哟房</string>
    <string name="title_main">哟房</string>
    <string name="all_agent">所有经纪人</string>
    <string name="publish_demand">发布需求</string>
    <string name="age_30_40">30-40岁</string>
    <string name="age_gt_40">40岁以上</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login">登录</string>
    <string name="pwd">密码</string>
    <string name="mobile">手机号</string>
    <string name="fast_login">快速注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="network_error">网络连接异常，请检查手机是否联网</string>
</resources>
