<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/top_bar">

        <ImageButton
            android:id="@+id/left"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/set"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_main"
            android:textColor="@color/text_grey_3"
            android:textSize="20dp"/>
        <ImageButton
            android:id="@+id/right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/msg"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/text_grey_e" >
        </LinearLayout>
    </RelativeLayout>
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_marginBottom ="60dp" />

    <RelativeLayout
        android:id="@+id/btnAll"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/bmapView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:background="@mipmap/btn_map_back"
        android:clickable="true">
        
        <ImageView
            android:id="@+id/image_allAgent"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/all_agent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_allAgent"
            android:layout_alignTop="@id/image_allAgent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/image_allAgent"
            android:gravity="center"
            android:text="@string/all_agent"
            android:textColor="@color/text_grey_6"
            android:textSize="16dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnPublish"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@id/btnAll"
        android:layout_alignBottom="@id/btnAll"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/btnAll"
        android:background="@mipmap/btn_map_back"
        android:clickable="true" >

        <ImageView
            android:id="@+id/image_publish"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/horn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_publish"
            android:layout_alignTop="@id/image_publish"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/image_publish"
            android:gravity="center"
            android:text="@string/publish_demand"
            android:textColor="@color/text_grey_6"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RelativeLayout
            android:id="@+id/bottomLeft"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="4"
            >

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                android:src="@mipmap/line" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBack"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_grey_9"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBack"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/age_30_40"
                android:textColor="@color/text_grey_9"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/imgBack"
                android:layout_marginRight="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/age_gt_40"
                android:textColor="@color/text_grey_9"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/img01"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/btn00" />

            <ImageView
                android:id="@+id/img02"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/img03"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomRight"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="6dp"
            android:layout_weight="5"
            android:background="@drawable/map_back_2_50" >

            <ImageView
                android:id="@+id/img_male"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/m" />

            <ImageView
                android:id="@+id/img_select"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@mipmap/btn2" />

            <ImageView
                android:id="@+id/img_female"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/f" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
